welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:11: error: value &&! is not a member of Boolean
    if(estFaceMur()&&!estSurBiscuit()){
                   ^